Since the .riv extension was causing problems, switched to flare again from the rive library.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   pointer_interceptor: ^0.10.1+1
-  rive: ^0.13.2
+  flare_flutter: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -26,7 +26,6 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - assets/flare/
-    - assets/rive/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   #
